Add MovieInformation page (admin side only)
Adds the admin part of the movie information page. Allows CMS user to
search for a movie and save a page. Uses the custom MovieTitleField and
the OMDb API to test validity on save (can't publish unless it is
valid).

--- a/lang/en.yml
+++ b/lang/en.yml
@@ -1,3 +1,5 @@
 en:
   MovieInformationField:
     TEXT_DESCRIPTION: 'Type in this textbox to update the dropdown below.'
+  MovieInformation:
+    Title: 'Movie Title'
